<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4022.10">
  <GVL Name="GVL_IO" Id="{4d418106-876b-4dd5-9543-229873772369}">
    <Declaration><![CDATA[{attribute 'qualified_only'}
VAR_GLOBAL
	w_PB_Inputs  AT%I* : ARRAY[0..7] OF WORD;   //on press values
	w_PB_Outputs AT%Q* : ARRAY[0..7] OF WORD;	//mercury console
//	w_PB_Inputs  AT%I* : WORD;
//	w_PB_Outputs AT%Q* : WORD;
	w_PB_interface_status AT%I* :WORD;		//status of the Profibus interface 

END_VAR]]></Declaration>
  </GVL>
</TcPlcObject>